--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <ul>
             <li><a href="#" onclick="CloseTimeLine()">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="./about/about.html">About</a></li>
             <li><a href="./projects/projects.html">Projects</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
