--- a/about/about.html
+++ b/about/about.html
@@ -14,9 +14,27 @@
     <body onload="LoadedWeb()">
         <div class="loader" id="loader"></div>
         <br>
-        <img src="me.png" alt="me" class="profile-photo">
+        <img src="../logo_kim.png" alt="me" class="profile-photo">
         <h4 align="center" class="name">Hi, I am Quim, nice to meet you!</h4>
         <h6 class="par" align="center">I am a Front End desginer currently living in Barcelona, Spain. I like to bring a creative idea to the projects where I work. I am passionate about helping clients with any questions they may have. In 2021 I founded my own company to migrate websites to the latest generation framework. My intention is to capture the image of a brand personality by developing comprehensive and compelling brand identities and designs.</h3>
+
+        <div class="one_pos">
+            
+        </div>
+
         <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
+        <div class="toast-container position-fixed bottom-0 end-0 p-3">
+            <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                <div class="toast-header">
+                    <img src="../logo_kim.png" class="rounded me-2" alt="..." style="height: 20px">
+                    <strong class="me-auto">Quim Alborch</strong>
+                    <small>1 min ago</small>
+                    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                </div>
+                <div class="toast-body">
+                    Don't forget to visit my <a href="https://es.linkedin.com/in/quimalborch">LinkedIn</a> There you have at hand all my studies and experiences of my life.
+                </div>
+            </div>
+        </div>
     </body>
 </html>
